# pbd-object-simulation

./: .gitignore  CMakeLists.txt  README.md
data/: cpu_threads8.csv  plot.py  plot_cpu.py  plot_gpu.py  plot_speedup.py  utils.py
data/cpu/: cpu_threads1.csv  cpu_threads16.csv  cpu_threads2.csv  cpu_threads4.csv
data/gpu/: gpu_block_size1024.csv  gpu_block_size128.csv  gpu_block_size256.csv  gpu_block_size32.csv  gpu_block_size512.csv  gpu_block_size64.csv
src/: event_manager.hpp  fps_counter.hpp  grid_helper.hpp  main.cpp  object.hpp  particle_cuda.cu  physics_handler.hpp  random_number_generator.hpp  renderer.hpp  utils.hpp  viewport_handler.hpp  window_handler.hpp
